k8s/03-deploy.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spawn
  labels:
    app: spawn
    group: generator
spec:
  selector:
    matchLabels:
      app: spawn
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: spawn
        group: generator
    spec:
      imagePullSecrets:
      - name: registry-pull
      containers:
      - name: spawn
        image: registry.iupi.io/iupi/spawn:0.1.3
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
        volumeMounts:
          - name: keycloak-config
            mountPath: /app/json
            readOnly: true
        resources:
          limits:
            cpu: 300m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
      volumes:
          - name: keycloak-config
            configMap:
              name: spawn-keycloak-cm
