k8s/04-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: generator
  labels:
    app: generator
    group: arlepton
spec:
  type: ClusterIP
  selector:
    app: generator
  ports:
    - port: 80
      targetPort: 3000
