k8s/05-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: generator-ing
  labels:
    app: generator
    group: arlepton
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - api.arlepton.com
    secretName: generator-tls
  rules:
  - host: api.arlepton.com
    http:
      paths:
      - path: /generator
        pathType: Prefix
        backend:
          service:
            name: generator
            port:
              number: 80
